[package]
name = "rgb-led-pwm-dma-maker"
version = "0.1.2"
edition = "2024"
authors = ['Dash Campbell']
description = "Used for creating a PWM waveform using the DMA to control RGB LEDs such as WS2812, WS2812B, SK6812, SK6812-RGBW."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DashCampbell/RGB-LED-PWM-DMA-Maker.git"
keywords = ["led", "ws2812", "ws2812b", "sk6812"]
categories = ["data-structures", "embedded", "no-std", "no-std::no-alloc"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
